[package]
name = "emu"
version = "0.1.0"
edition = "2021"
description = "RISC-V Emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui_dock = "0.5.0"
egui_memory_editor = "0.2.3"
env_logger = "0.10.0"
log = "0.4.17"
